[fix] multiple container cart

--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -54,7 +54,7 @@
               </button>
             </td>
             <td class="text-xl-center text-left ">
-              <button style="width: 150px" class="btn  btn-success " type="button" (click)="goToDetailPayment()"><i *ngIf="coupon.price > 0"
+              <button style="width: 150px" class="btn  btn-success " type="button" (click)="goToDetailPayment(coupon.id)"><i *ngIf="coupon.price > 0"
                 class="fas fa-euro-sign mr-2"></i>
                 <i *ngIf="coupon.price === 0"
                    class="fas fa-check mr-2"></i><div  class="btn btn-success">{{ coupon.price > 0? 'Paga': 'Ottieni'}}</div>
@@ -82,7 +82,7 @@
         </table>
 
         <div style="text-align: right; padding-bottom: 2em;padding-top: 1em">
-          <h4 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h4>
+<!--          <h4 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h4>-->
 
         </div>
         <div class="card-body p-0">
@@ -116,7 +116,7 @@
                     <button type="button" class="btn btn-danger" (click)="openModal(template)"><i
                       class="fas fa-trash"></i>
                     </button>
-                    <button style="width: 100px" class="btn btn-sm btn-success float-right ml-1" type="button" (click)="goToDetailPayment()"><i *ngIf="coupon.price > 0"
+                    <button style="width: 100px" class="btn btn-sm btn-success float-right ml-1" type="button" (click)="goToDetailPayment(coupon.id)"><i *ngIf="coupon.price > 0"
                       class="fas fa-euro-sign mr-0"></i><i *ngIf="coupon.price === 0" class="fas fa-check mr-0"></i><div  class="btn btn-success">{{ coupon.price > 0? 'Paga': 'Ottieni'}}</div>
                     </button>
                   </a>
@@ -157,7 +157,7 @@
             </ng-template>
           </div>
           <div style="text-align: right" class=" float-right">
-            <h4 class="">Totale: {{formatPrice(totalAmount)}}</h4>
+<!--            <h4 class="">Totale: {{formatPrice(totalAmount)}}</h4>-->
 
           </div>
 
