Aggiunta loading e toastr su registrazione, modificato messaggio cart e rimossa selezione broker da crea/modifica coupon

--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -62,7 +62,7 @@
 
     <div *ngIf="userType == 2" class="col my-auto" style="margin-right: -0.5em; text-align: right">
       <div *ngIf="desktopMode">
-        <a *ngIf="cart.length === 0" class="text-white">Il carrello  <b class="text-info">è vuoto.</b>! </a>
+        <a *ngIf="cart.length === 0" class="text-white">Il carrello  <b class="text-info">è vuoto</b>! </a>
         <a *ngIf="cart.length > 0" class="text-white cursor-pointer" [routerLink]="['/cart']">
           <span class=" d-lg-inline-block ">Hai <b class="text-info">{{cart.length}} {{cart.length === 1 ?
             'articolo' : 'articoli'}}</b> nel carrello.</span>
