--- a/src/app/features/authentication/register/register-form-producer/register-form-producer.component.html
+++ b/src/app/features/authentication/register/register-form-producer/register-form-producer.component.html
@@ -151,7 +151,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text"><i class="fas fa-map"></i></span>
       </div>
-      <input type="text" formControlName="province" class="form-control" placeholder="Province"
+      <input type="text" formControlName="province" class="form-control" placeholder="Provincia"
              [ngClass]="{ 'is-invalid': submitted && f.province.errors }" maxlength="2"/>
 
       <div *ngIf="submitted && f.province.errors" class="invalid-feedback">
