--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -128,20 +128,20 @@
               </div>
 
             </div>
-            <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Privato per: </label>
-              <div class="col-sm-8">
-                <ng-select formControlName="broker"
-                           [items]="brokers"
-                           [multiple]="true"
-                           [closeOnSelect]="true"
-                           [searchable]="true"
-                           bindLabel="username"
-                           placeholder="Seleziona broker"
-                           [(ngModel)]="selectedBroker">
-                </ng-select>
-              </div>
-            </div>
+            <!--<div class="form-group row">-->
+              <!--<label class="col-sm-2 col-form-label">Privato per: </label>-->
+              <!--<div class="col-sm-8">-->
+                <!--<ng-select formControlName="broker"-->
+                           <!--[items]="brokers"-->
+                           <!--[multiple]="true"-->
+                           <!--[closeOnSelect]="true"-->
+                           <!--[searchable]="true"-->
+                           <!--bindLabel="username"-->
+                           <!--placeholder="Seleziona broker"-->
+                           <!--[(ngModel)]="selectedBroker">-->
+                <!--</ng-select>-->
+              <!--</div>-->
+            <!--</div>-->
             <!-- Published From -->
 
             <div class="form-group row">
