--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="alert alert-primary" role="alert" *ngIf="cart.length > 1">
-    <h5>È possibile acquistare una sola tipologia di coupon alla volta.</h5>
+    <h5>È possibile acquistare una sola tipologia di coupon per volta.</h5>
   </div>
   <!--<div class="text-uppercase">-->
     <!--&lt;!&ndash;<h1 *ngIf="cart.length > 1" style="text-align: center;" class="align-text-top btn-info"><p style="color: white"> é possibile ottenere un articolo a transazione. </p></h1>&ndash;&gt;-->
