--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -144,20 +144,20 @@
               </div>
 
             </div>
-            <!--<div class="form-group row">-->
-              <!--<label class="col-lg-3 col-sm-3 col-form-label">Privato per: </label>-->
-              <!--<div class="col-sm-8">-->
-                <!--<ng-select formControlName="broker"-->
-                           <!--[items]="brokers"-->
-                           <!--[multiple]="true"-->
-                           <!--[closeOnSelect]="true"-->
-                           <!--[searchable]="true"-->
-                           <!--bindLabel="username"-->
-                           <!--placeholder="Seleziona broker"-->
-                           <!--[(ngModel)]="selectedBroker">-->
-                <!--</ng-select>-->
-              <!--</div>-->
-            <!--</div>-->
+            <div class="form-group row">
+              <label class="col-lg-3 col-sm-3 col-form-label">Privato per: </label>
+              <div class="col-sm-8">
+                <ng-select formControlName="broker"
+                           [items]="brokers"
+                           [multiple]="true"
+                           [closeOnSelect]="true"
+                           [searchable]="true"
+                           bindLabel="username"
+                           placeholder="Seleziona broker"
+                           [(ngModel)]="selectedBroker">
+                </ng-select>
+              </div>
+            </div>
             <!-- Published From -->
 
             <div class="form-group row">
