--- a/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
+++ b/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
@@ -21,8 +21,8 @@
             </div> <!-- Title -->
 
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Breve Descrizione:</label>
-              <div class="col-sm-10">
+              <label class="col-lg-3 col-sm-3 col-form-label">Breve Descrizione:</label>
+              <div class="col-lg-9 col-sm-9">
                 <textarea rows="2" type="text" formControlName="short_description" class="form-control"
                           [ngClass]="{ 'is-invalid': submitted && f.short_description.errors }"></textarea>
               </div>
@@ -78,27 +78,27 @@
               </div>
             </div> <!-- Price -->
 
-            <div class="form-group row">
-              <label class="col-12 col-lg-3 col-sm-3 col-form-label">Visibile da:</label>
-              <div class="col-8 col-lg-7 col-sm-7">
-                <input style="background: white" type="text" mwlFlatpickr
-                       [clickOpens]="true" [noCalendar]="false" [convertModelValue]="true" [enableTime]="true"
-                       dateFormat="Y-m-d H:i" formControlName="published_from" class="form-control"
-                       [style.background]="bgColorPrivate"
-                       [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
-                <div *ngIf="submitted && f.published_from.errors " class="invalid-feedback">
-                  <div *ngIf=" f.published_from.errors ">data non corretta</div>
-                </div>
-              </div>
-              <div class="col-4  col-sm-2 col-lg-2 my-auto">
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" name="privateCheck" class="custom-control-input" id="privateCheck"
-                         [checked]="markedPrivate" (change)="toggleCheckbox($event)"
-                         data-md-icheck>
-                  <label class="custom-control-label" for="privateCheck">Privato</label>
-                </div>
-              </div>
-            </div> <!-- Published From -->
+            <!--<div class="form-group row">-->
+              <!--<label class="col-12 col-lg-3 col-sm-3 col-form-label">Visibile da:</label>-->
+              <!--<div class="col-8 col-lg-7 col-sm-7">-->
+                <!--<input style="background: white" type="text" mwlFlatpickr-->
+                       <!--[clickOpens]="true" [noCalendar]="false" [convertModelValue]="true" [enableTime]="true"-->
+                       <!--dateFormat="Y-m-d H:i" formControlName="published_from" class="form-control"-->
+                       <!--[style.background]="bgColorPrivate"-->
+                       <!--[ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>-->
+                <!--<div *ngIf="submitted && f.published_from.errors " class="invalid-feedback">-->
+                  <!--<div *ngIf=" f.published_from.errors ">data non corretta</div>-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="col-4  col-sm-2 col-lg-2 my-auto">-->
+                <!--<div class="custom-control custom-checkbox">-->
+                  <!--<input type="checkbox" name="privateCheck" class="custom-control-input" id="privateCheck"-->
+                         <!--[checked]="markedPrivate" (change)="toggleCheckbox($event)"-->
+                         <!--data-md-icheck>-->
+                  <!--<label class="custom-control-label" for="privateCheck">Privato</label>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div> &lt;!&ndash; Published From &ndash;&gt;-->
             <div class="form-group row">
               <label class="col-lg-3 col-sm-3 col-form-label">Seleziona categorie: </label>
               <div class="col-sm-8">
