--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -38,14 +38,14 @@
 
     <!-- Quantity Column -->
     <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-sm-table-cell d-none" style="width: 100px">Unità vendute</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-sm-table-cell d-none" style="width: 100px">Unità create</th>
       <td mat-cell *matCellDef="let coupon" class="p-1 d-sm-table-cell d-none" style="text-align: center;">{{coupon.quantity}}</td>
     </ng-container>
 
     <!-- Sold Column -->
     <ng-container matColumnDef="buyed">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-lg-table-cell d-none" style="width: 100px">Unità rimaste</th>
-      <td mat-cell *matCellDef="let coupon" class="d-lg-table-cell d-none" style="text-align: center;">{{coupon.quantity - coupon.buyed}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-lg-table-cell d-none" style="width: 100px">Consumati</th>
+      <td mat-cell *matCellDef="let coupon" class="d-lg-table-cell d-none" style="text-align: center;">{{coupon.buyed}}</td>
     </ng-container>
 
     <!-- Buttons Column-->
