--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -43,8 +43,8 @@
     </ng-container>
 
     <!-- Sold Column -->
-    <ng-container matColumnDef="buyed">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-lg-table-cell d-none" style="width: 100px">Consumati</th>
+    <ng-container matColumnDef="assigned">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-lg-table-cell d-none" style="width: 100px">Venduti</th>
       <td mat-cell *matCellDef="let coupon" class="d-lg-table-cell d-none" style="text-align: center;">{{coupon.buyed}}</td>
     </ng-container>
 
